# hw2

./: .dockerignore  README.md  dockerfile  pyproject.toml
hw2/: addrbook.py  bot.py  clean.py  notebook.py
